test/trivial/jturner/missingCastThisPragmaError.good
missingCastThisPragmaError.chpl:5: error: unresolved access of 'fixed_length_string' by '[2]'
