test/trivial/jturner/missingCastThisPragmaError.chpl
pragma "fixed string"
class fixed_length_string { }

var y = new fixed_length_string();
writeln(y[2]);
